<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_view"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="300dip"
        android:cacheColorHint="#00000000"
        android:overScrollMode="never"
        android:fadingEdge="none"
        android:fastScrollEnabled="false"
        android:footerDividersEnabled="false"
        android:headerDividersEnabled="false"
        android:background="@color/white"
        android:smoothScrollbar="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--面积-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dip"
                    android:layout_marginBottom="8dip"
                    android:singleLine="true"
                    android:textColor="@color/color_text"
                    android:text="@string/area"
                    android:textStyle="bold"
                    android:textSize="15dip" />
            </LinearLayout>

            <com.softgrid.shortvideo.customView.FlowLayout
                android:id="@+id/flow_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:layout_marginTop="2dip"
                android:layout_marginBottom="8dip"
                app:itemColor="@color/color_detail"
                app:itemSize="13sp"
                app:circleStyle="false"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="@color/line_color"/>

            <!--朝向-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dip"
                    android:layout_marginBottom="8dip"
                    android:singleLine="true"
                    android:textColor="@color/color_text"
                    android:text="@string/orientation"
                    android:textStyle="bold"
                    android:textSize="15dip" />
            </LinearLayout>

            <com.softgrid.shortvideo.customView.FlowLayout
                android:id="@+id/flow_orientation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:layout_marginTop="2dip"
                android:layout_marginBottom="8dip"
                app:itemColor="@color/color_detail"
                app:itemSize="13sp"
                app:textPaddingH ="15dp"
                app:circleStyle="false"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="@color/line_color"/>

            <!--装修-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dip"
                    android:layout_marginBottom="8dip"
                    android:singleLine="true"
                    android:textColor="@color/color_text"
                    android:text="@string/decorate"
                    android:textStyle="bold"
                    android:textSize="15dip" />
            </LinearLayout>

            <com.softgrid.shortvideo.customView.FlowLayout
                android:id="@+id/flow_decorate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:layout_marginTop="2dip"
                android:layout_marginBottom="8dip"
                app:itemColor="@color/color_detail"
                app:itemSize="13sp"
                app:textPaddingH ="15dp"
                app:circleStyle="false"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="@color/line_color"/>

            <!--排序-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dip"
                    android:layout_marginBottom="8dip"
                    android:singleLine="true"
                    android:textColor="@color/color_text"
                    android:text="@string/sort"
                    android:textStyle="bold"
                    android:textSize="15dip" />
            </LinearLayout>

            <com.softgrid.shortvideo.customView.FlowLayout
                android:id="@+id/flow_sort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:layout_marginTop="2dip"
                android:layout_marginBottom="8dip"
                app:itemColor="@color/color_detail"
                app:itemSize="13sp"
                app:textPaddingH ="15dp"
                app:circleStyle="false"
                />

        </LinearLayout>


    </ScrollView>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/line_color"/>
    <!--清空按钮-->
    <LinearLayout
        android:id="@+id/btn_clear"
        android:layout_width="match_parent"
        android:layout_height="48dip"
        android:gravity="center"
        android:background="@drawable/color_white"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:singleLine="true"
            android:textColor="@color/color_text"
            android:text="@string/clear"
            android:textStyle="bold"
            android:textSize="15dip" />
    </LinearLayout>

    <!--确认按钮-->
    <LinearLayout
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="48dip"
        android:gravity="center"
        android:background="@drawable/color_main"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:singleLine="true"
            android:textColor="@color/white"
            android:text="@string/confirm"
            android:textStyle="bold"
            android:textSize="15dip" />
    </LinearLayout>

</LinearLayout>